add_executable(client_batchnorm_fwd_nhwc batchnorm_fwd_nhwc.cpp)
target_link_libraries(client_batchnorm_fwd_nhwc PRIVATE composable_kernel::device_operations)
target_compile_features(client_batchnorm_fwd_nhwc PRIVATE cxx_std_17)

add_executable(client_batchnorm_bwd_nhwc batchnorm_bwd_nhwc.cpp)
target_link_libraries(client_batchnorm_bwd_nhwc PRIVATE composable_kernel::device_operations)
target_compile_features(client_batchnorm_bwd_nhwc PRIVATE cxx_std_17)

add_executable(client_batchnorm_infer_nhwc batchnorm_infer_nhwc.cpp)
target_link_libraries(client_batchnorm_infer_nhwc PRIVATE composable_kernel::device_operations)
target_compile_features(client_batchnorm_infer_nhwc PRIVATE cxx_std_17)
